src/FinancialForce Accounting/objects/ObjectToObjectMapFieldLink__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>Filter__c</referenceTo>
        <relationshipLabel>ObjectToObjectMapFieldLinks</relationshipLabel>
        <relationshipName>ObjectToObjectMapFieldLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FromField__c</fullName>
        <description>The field to map from</description>
        <label>FromField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectToObjectMap__c</fullName>
        <description>Parent Map</description>
        <label>ObjectToObjectMap</label>
        <referenceTo>ObjectToObjectMap__c</referenceTo>
        <relationshipLabel>ObjectToObjectMapFieldLinks</relationshipLabel>
        <relationshipName>ObjectToObjectMapFieldLinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ToField__c</fullName>
        <description>The field to map to</description>
        <label>ToField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>zDeprecated:ObjectToObjectMapFieldLink</label>
    <nameField>
        <displayFormat>OTOMFL-{000000}</displayFormat>
        <label>ObjectToObjectMapFieldLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ObjectToObjectMapFieldLinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>